# gba-platformer

./: .gitignore  CREDITS.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
gfx/source/: tilemap_packed.aseprite
gfx/sprites/: units.aseprite
map/: level01.tmx  tilemap.tsx
sfx/: convert.sh
src/: entity.rs  level.rs  main.rs  num.rs  player.rs
src/gfx/: mod.rs  sprites.rs
